# Relaq

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose-dev.yml  docker-compose-uat.yml
backend/: config.py  main.py  prompts.py  pyproject.toml
backend/chatgpt/: api.py
backend/felo/: scraper.py
backend/googlemap/: api.py  models.py
backend/outscraper/: __init__.py  api.py
backend/perplexity/: api.py
backend/web_scraper/: selenium.py
relaq/: manage.py  requirements.txt  test_summary.py  test_tag.py
relaq/chatgpt/: constants.py  services.py
relaq/cms/: admin.py  constants.py  models.py  urls.py  views.py
relaq/cms/management/commands/: init_shop_info.py  init_shop_tags.py
relaq/cms/migrations/: 0001_initial.py  0002_homepagebanner_alter_shop_options_alter_shoptag_type_and_more.py  0003_alter_article_content.py  0004_remove_shop_ai_summary_shop_city_shop_core_features_and_more.py  0005_alter_homepagebanner_options_and_more.py  0006_shop_price_max_shop_price_min.py  0007_shop_business_hours.py  0008_alter_shop_core_features_and_more.py  0009_alter_article_created_at_alter_article_updated_at_and_more.py
relaq/cms/serializers/: objs.py  requests.py  response.py
relaq/config/: README.md
relaq/core/: constants.py  models.py  services.py  utils.py
relaq/core/middleware/: request_logging.py
relaq/core/serializers/: base.py
relaq/deploy/uat/: Dockerfile
relaq/felo/: apps.py  scraper.py
relaq/googlemap/: models.py  services.py
relaq/outscrapers/: apps.py  services.py
relaq/relaq/: asgi.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
